mlr_2.9:
- SMOTEWrapper: fix a bug where "sw.nn" was not correctly passed down
- classif.blackboost, regr.blackboost: made sure that arg "stump" is passed on
  correctly
- fixed parameter values for WEKA learners IBk, J48, PART, EM, SimpleKMeans,
  XMeans
- fixed a bug that caused hyperparameters to be not passed on correctly in the
  ModelMultiplexer in some cases
- various cleanups that removed unused code
- updated gmean measure and unit test, added reference to formula of gmean
- classif.glmboost, regr.glmboost: add parameters stopintern and trace
- convert data.frame-ish in Task if necessary
- fix bug with NoFeaturesModel and ModelMultiplexer
- clean up randomForestSRC and randomForestSRCSyn learners
- fix bug with partialPredictions and GGVIS
- remove unnecessary linear.output parameter for classif.neuralnet
- remove unsupported KSVM parameter value stringdot
- fix some bartMachine compatibility issues
- add pretty.names arguments to plots that show learner short names instead of
  IDs
- improve documentation for permutation.importance filter and perform slight
  argument renaming to fix potential name clashes
- fix small bug in DownsampleWrapper when trained with weights
- the "penalized" learner were restructured and improved (params were added), also see below.
- makeCostMeasure: removed arg "task", names of cost matrix are checked on measure calculation
-- fixed weight handling and weight tag for some learners
- rename generatePartialPrediction, plotPartialPrediction, and plotPartialPredictionGGVIS to
  generatePartialDependence, plotPartialDependence, and plotPartialDependenceGGVIS

- new learners
-- surv.cv.CoxBoost
-- regr.penalized.fusedlasso
-- regr.glm
-- classif.C50
-- classif.penalized.ridge
-- classif.penalized.lasso
-- classif.penalized.fusedlasso
-- surv.penalized.ridge
-- surv.penalized.lasso
-- surv.penalized.fusedlasso

- removed learners
-- surv.optimCoxBoostPenalty
-- surv.penalized (split up, see new learners above)

- removed functions