@@ -450,6 +450,8 @@ S3method(print,UnsupervisedTask)
 S3method(print,WrappedModel)
 S3method(reimpute,Task)
 S3method(reimpute,data.frame)
+S3method(removeConstantFeatures,Task)
+S3method(removeConstantFeatures,data.frame)
 S3method(removeHyperPars,BaseEnsemble)
 S3method(removeHyperPars,BaseWrapper)
 S3method(removeHyperPars,Learner)
@@ -800,6 +802,7 @@ export(makeRLearnerMultilabel)
 export(makeRLearnerRegr)
 export(makeRLearnerSurv)
 export(makeRegrTask)
+export(makeRemoveConstantFeaturesWrapper)
 export(makeResampleDesc)
 export(makeResampleInstance)
 export(makeSMOTEWrapper)
