@@ -1,7 +1,6 @@
 context("removeConstantFeatures")
 
 test_that("removeConstantFeatures", {
-
   data = data.frame(
     a = c(1L, 2L),
     b = as.factor(1:2),
@@ -17,8 +16,10 @@ test_that("removeConstantFeatures", {
   data$safe = seq_row(data)
   task = makeClassifTask("test", data = data, target = "target")
 
-  res = getTaskData(removeConstantFeatures(task, perc = 0.1, dont.rm = "g"))
-  expect_equal(colnames(res), c("g", "target", "safe"))
+  res1 = getTaskData(removeConstantFeatures(task, perc = 0.1, dont.rm = "g"))
+  res2 = removeConstantFeatures(getTaskData(task), perc = 0.1, dont.rm = c("g", "target"))
+  expect_equal(colnames(res1), c("g", "target", "safe"))
+  expect_equal(res1, res2)
 
   res = getTaskData(removeConstantFeatures(task, na.ignore = TRUE))
   expect_equal(colnames(res), c("a", "b", "c", "d", "target", "safe"))
@@ -28,4 +29,15 @@ test_that("removeConstantFeatures", {
 
   res = getTaskData(removeConstantFeatures(task, na.ignore = FALSE, perc = 0.2))
   expect_equal(colnames(res), c("target", "safe"))
+
+
+  data = dropNamed(data, c("e", "f"))
+  data$target = 1
+  data$noise = rnorm(nrow(data))
+  lrn = makeLearner("regr.lm")
+  lrn = makeRemoveConstantFeaturesWrapper(lrn, perc = 0.1)
+  task = makeRegrTask(data = data, target = "target")
+  model = train(lrn, task)
+  mod = getLearnerModel(model)$learner.model
+  expect_true(setequal(names(coef(mod)), c("(Intercept)", "noise", "safe")))
 })
